--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           Как мы это делаем
         </div>
         <div class="services_item-text">
-          Продвижение раздельного сбора и переработки отходов в регионах, а также сокращение неперерабатываемых отходов, просвещение широких слоев населения о важности участия общественности в решении “мусорной” проблемы.
+          <p>Продвижение раздельного сбора и переработки отходов в регионах, а также сокращение неперерабатываемых отходов, просвещение широких слоев населения о важности участия общественности в решении “мусорной” проблемы.</p>
         </div>
         <div class="services_item-btn">
           <a href="#">Подробнее</a>
@@ -104,7 +104,7 @@
           Вдохновление
         </div>
         <div class="services_item-text">
-          Польза раздельного сбора мусора очевидна. Такой подход уменьшает степень загрязнения воды, воздуха и земли. Вторичная переработка снижает количество потребляемой воды и величину городских свалок, экономит природные ресурсы Земли.
+          <p>Польза раздельного сбора мусора очевидна. Такой подход уменьшает степень загрязнения воды, воздуха и земли. Вторичная переработка снижает количество потребляемой воды и величину городских свалок, экономит природные ресурсы Земли.</p>
         </div>
         <div class="services_item-btn">
           <a href="#">Подробнее</a>
@@ -116,7 +116,7 @@
           Позиция
         </div>
         <div class="services_item-text">
-          Общественные экологические организации России объединили свои усилия и создали Альянс против сжигания и за переработку отходов на нижеизложенных принципах для информирования населения России об опасностях, которые несет применение мусоросжигательных технологий.
+          <p>Общественные экологические организации России объединили свои усилия и создали Альянс против сжигания и за переработку отходов на нижеизложенных принципах для информирования населения России об опасностях, которые несет применение мусоросжигательных технологий.</p>
         </div>
         <div class="services_item-btn">
           <a href="#">Подробнее</a>
@@ -216,7 +216,7 @@
           Вырубка лесов
         </div>
         <div class="adv_text">
-          Одна из самых распространенных проблем экологии. С уничтожением деревьев в системе биогеоценоза нарушается экологическое равновесие.
+          <p>Одна из самых распространенных проблем экологии. С уничтожением деревьев в системе биогеоценоза нарушается экологическое равновесие.</p>
         </div>
       </div>
       <div class="adv_item">
@@ -227,7 +227,7 @@
           Мусорозжигание
         </div>
         <div class="adv_text">
-          При сжигании отходов в воздух попадает много крайне опасных веществ, таких как диоксины и тяжелые металлы. Действие диоксинов на организм человека сравнимо с действием ВИЧ.
+          <p>При сжигании отходов в воздух попадает много крайне опасных веществ, таких как диоксины и тяжелые металлы. Действие диоксинов на организм человека сравнимо с действием ВИЧ.</p>
         </div>
       </div>
       <div class="adv_item">
@@ -238,7 +238,7 @@
           Загрязнение пресных вод
         </div>
         <div class="adv_text">
-          В мире уже сейчас наблюдается нехватка пресной воды преимущественно, в регионах, находящихся близко к экватору. Загрязнение водоёмов лишь усугубляет положение вещей.
+          <p>В мире уже сейчас наблюдается нехватка пресной воды преимущественно, в регионах, находящихся близко к экватору. Загрязнение водоёмов лишь усугубляет положение вещей.</p>
         </div>
       </div>
     </div>
@@ -289,7 +289,7 @@
             Обращение с отходами в Цюрихе
           </div>
           <div class="news_blog-text">
-            Швейцарии успешно удается поддерживать образ чистой и ухоженной страны, где все проблемы рационального природопользования и экологии давно решены. Так ли это?
+            <p>Швейцарии успешно удается поддерживать образ чистой и ухоженной страны, где все проблемы рационального природопользования и экологии давно решены. Так ли это?</p>
           </div>
         </a>
 
@@ -302,7 +302,7 @@
               Завод по переработке тетрапака
             </div>
             <div class="news_blog-text">
-              Как перерабатывают полиэтилен и алюминий из многослойной упаковки Tetra Pak и ее аналогов на заводе “Инвестал” в г. Тамбов
+              <p>Как перерабатывают полиэтилен и алюминий из многослойной упаковки Tetra Pak и ее аналогов на заводе “Инвестал” в г. Тамбов</p>
             </div>
           </a>
       </div>
@@ -314,25 +314,26 @@
 
 
 <footer class="footer">
-  <div class="footer_contant">
+  <div class="footer_content">
     <div class="container">
-      <div class="footer_info">
-        <div class="footer_title">
-          Движение "NO WASTE"
+      <div class="footer_inner">
+        <div class="footer_info">
+          <div class="footer_title">
+            Движение "NO WASTE"
+          </div>
+          <div class="footer_text">
+            <p>Деятельность движения стимулирует появление и развитие новой системы обращения с отходами в России, основанной на принципах 3R (reduce, reuse, recycle – уменьшай, используй повторно, перерабатывай), и формирует осознанное, рациональное отношение людей к природным ресурсам.</p>
+          </div>
+            <a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="header_qest" href="#">Задать вопрос</a>
+            <ul class="footer_list">
+              <li><a href="tel:+79117235428">+7 (911) 723 54 28</a></li>
+              <li><a href="#">strange3355@mail.ru</a></li>
+              <li><a href="#">СПб, Смольный пр-д, 1</a></li>
+            </ul>
         </div>
-        <div class="footer_text">
-          Деятельность движения стимулирует появление и развитие новой системы обращения с отходами в России, основанной на принципах 3R (reduce, reuse, recycle – уменьшай, используй повторно, перерабатывай), и формирует осознанное, рациональное отношение людей к природным ресурсам.
+        <div class="footer_map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.1957112861292!2d30.39423361597181!3d59.94548718187869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696318c3393243f%3A0x28950e733072f5ce!2z0KHQvNC-0LvRjNC90YvQuSDQv9GALdC0LCAxLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTI0!5e0!3m2!1sru!2sru!4v1576507045119!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
-          <a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="header_qest" href="#">Задать вопрос</a>
-          <ul class="footer_list">
-            <li><a href="#">+7 (911) 723 54 28</a></li>
-            <li><a href="#">strange3355@mail.ru</a></li>
-            <li><a href="#">СПб, Моравский 5к3</a></li>
-          </ul>
-      </div>
-      <div class="footer_map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2004.6684115431963!2d30.419893016066332!3d59.83803898183975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46962583a87582ff%3A0xa2c07bf85d10363b!2z0JzQvtGA0LDQstGB0LrQuNC5INC_0LXRgC4sIDUsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTIyODk!5e0!3m2!1sru!2sru!4v1576430313828!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-
       </div>
     </div>
   </div>
