--- a/index.html
+++ b/index.html
@@ -312,23 +312,22 @@
 
 
 
-
 <footer class="footer">
   <div class="footer_content">
     <div class="container">
       <div class="footer_inner">
         <div class="footer_info">
           <div class="footer_title">
-            Движение "NO WASTE"
+            <p>Движение "NO WASTE"</p>
           </div>
           <div class="footer_text">
             <p>Деятельность движения стимулирует появление и развитие новой системы обращения с отходами в России, основанной на принципах 3R (reduce, reuse, recycle – уменьшай, используй повторно, перерабатывай), и формирует осознанное, рациональное отношение людей к природным ресурсам.</p>
           </div>
             <a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="header_qest" href="#">Задать вопрос</a>
             <ul class="footer_list">
-              <li><a href="tel:+79117235428">+7 (911) 723 54 28</a></li>
-              <li><a href="#">strange3355@mail.ru</a></li>
-              <li><a href="#">СПб, Смольный пр-д, 1</a></li>
+              <li><a class="footer_phone" href="tel:+79117235428">+7 (911) 723 54 28</a></li>
+              <li><a class="footer_mail" href="#">strange3355@mail.ru</a></li>
+              <li><a class="footer_adress" href="#">СПб, Смольный пр-д, 1</a></li>
             </ul>
         </div>
         <div class="footer_map">
@@ -340,7 +339,7 @@
   <div class="footer_copy">
     <div class="container">
       <div class="copy_text">
-      2019 Developed by Alexander Nazarov. Все права защищены.
+      © 2019 Developed by Alexander Nazarov. Все права защищены.
       </div>
     </div>
   </div>
@@ -355,7 +354,8 @@
 
 
 
-5.21.40
+
+
 
 <div id="animatedModal" class="animated-modal">
    <h2>Hello! 1.24</h2>
