--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatable"  content="ie=edge">
-  <title>Документ без названия</title>
-<link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&display=swap&subset=cyrillic" rel="stylesheet">
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/fonts.css">
-<link rel="stylesheet" href="css/jquery.fancybox.min.css">
-<!-- <link rel="stylesheet" href="css/sl ick.css"> -->
-<link rel="stylesheet" href="/css/jquery.formstyler.css">
-<link rel="stylesheet" href="css/style.css">
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatable"  content="ie=edge">
+    <title>Документ без названия</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <!-- <link rel="stylesheet" href="css/sl ick.css"> -->
+    <link rel="stylesheet" href="css/jquery.formstyler.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 
 
@@ -54,7 +54,7 @@
 
 
 <!--*********** ШАПКА ФОН     ШАПКА ФОН       ШАПКА ФОН     ШАПКА ФОН***********    -->
-<section class="slider">
+<!--  <section class="slider">
   <div class="container">
    <div id="photo"><img src="img/logo.png" weight=600px; height="500px;"></div>
   </div>
@@ -62,7 +62,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-<!--***********ПОД ШАПКА ФОН    ПОД ШАПКА ФОН      ПОД ШАПКА ФОН    ПОД ШАПКА ФОН***********    -->
+<!--***********ПОД ШАПКА ФОН    ПОД ШАПКА ФОН      ПОД ШАПКА ФОН    ПОД ШАПКА ФОН***********    --> <!--
 <section class="services">
   <div class="container">
     <div class="services_top">
@@ -128,7 +128,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-<!--*********** О КОМПАНИИ       О КОМПАНИИ         О КОМПАНИИ***********    -->
+<!--*********** О КОМПАНИИ       О КОМПАНИИ         О КОМПАНИИ***********    --> <!--
 <section class="about">
   <div class="container">
     <div class="about_inner">
@@ -146,7 +146,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-<!--*********** ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ       ОБРАТНАЯ СВЯЗТЬ         ***********    -->
+<!--*********** ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ       ОБРАТНАЯ СВЯЗТЬ         ***********    -->  <!--
 <section class="form">
   <div class="container">
     <div class="form_inner">
@@ -204,7 +204,7 @@
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
-<!--*********** МЫ ПРОТИВ         МЫ ПРОТИВ         МЫ ПРОТИВ       МЫ ПРОТИВ         ***********    -->
+<!--*********** МЫ ПРОТИВ         МЫ ПРОТИВ         МЫ ПРОТИВ       МЫ ПРОТИВ         ***********    --> <!--
 <section class="advantages">
   <div class="container">
     <div class="adv_items">
@@ -247,7 +247,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-<!--*********** НОВОСТИ            НОВОСТИ            НОВОСТИ            НОВОСТИ             ***********    -->
+<!--*********** НОВОСТИ            НОВОСТИ            НОВОСТИ            НОВОСТИ             ***********    -->  <!--
 <section class="news">
   <div class="container">
     <div class="news_top">
@@ -310,7 +310,7 @@
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
-
+<!--
 
 <footer class="footer">
   <div class="footer_content">
@@ -331,7 +331,7 @@
             </ul>
         </div>
         <div class="footer_map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.1957112861292!2d30.39423361597181!3d59.94548718187869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696318c3393243f%3A0x28950e733072f5ce!2z0KHQvNC-0LvRjNC90YvQuSDQv9GALdC0LCAxLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTI0!5e0!3m2!1sru!2sru!4v1576507045119!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1433.4756173342266!2d30.394919122871983!3d59.94580525193516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696318c3393243f%3A0x28950e733072f5ce!2z0KHQvNC-0LvRjNC90YvQuSDQv9GALdC0LCAxLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTI0!5e0!3m2!1sru!2sru!4v1577277794536!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
       </div>
     </div>
@@ -345,21 +345,16 @@
   </div>
 </footer>
 
-
-
-
-
-
-
-
-
-
+-->
 
 
 
 <div id="animatedModal" class="animated-modal">
-   <h2>Hello! 1.24</h2>
-   <p>This is animated content! Cool, right? 1920х497</p>
+  <form>
+    <input type="text" placeholder="Ваше имя">
+    <input type="text" placeholder="Ваш телефон">
+    <input type="submit" value="Отправить">
+  </form>
  </div>
 
 
