--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     <div class="header_content">
       <div class="container">
         <div class="header_content-inner">
-          <nav class="menu">              <!-- Меню шапки -->
+          <nav class="menu">
+            <div class="header_qest-menu">
+              <span class="icon-bars"></span>
+            </div>              <!-- Меню шапки -->
             <ul>
               <li><a href="#">ГЛАВНАЯ</a></li>
               <li><a href="#">Об NO WASTE</a></li>
@@ -54,7 +57,7 @@
 
 
 <!--*********** ШАПКА ФОН     ШАПКА ФОН       ШАПКА ФОН     ШАПКА ФОН***********    -->
-<!--  <section class="slider">
+ <section class="slider">
   <div class="container">
    <div id="photo"><img src="img/logo.png" weight=600px; height="500px;"></div>
   </div>
@@ -62,7 +65,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-<!--***********ПОД ШАПКА ФОН    ПОД ШАПКА ФОН      ПОД ШАПКА ФОН    ПОД ШАПКА ФОН***********    --> <!--
+<!--***********ПОД ШАПКА ФОН    ПОД ШАПКА ФОН      ПОД ШАПКА ФОН    ПОД ШАПКА ФОН***********    -->
 <section class="services">
   <div class="container">
     <div class="services_top">
@@ -128,7 +131,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-<!--*********** О КОМПАНИИ       О КОМПАНИИ         О КОМПАНИИ***********    --> <!--
+<!--*********** О КОМПАНИИ       О КОМПАНИИ         О КОМПАНИИ***********    -->
 <section class="about">
   <div class="container">
     <div class="about_inner">
@@ -146,7 +149,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-<!--*********** ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ       ОБРАТНАЯ СВЯЗТЬ         ***********    -->  <!--
+<!--*********** ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ       ОБРАТНАЯ СВЯЗТЬ         ***********    -->
 <section class="form">
   <div class="container">
     <div class="form_inner">
@@ -204,7 +207,7 @@
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
-<!--*********** МЫ ПРОТИВ         МЫ ПРОТИВ         МЫ ПРОТИВ       МЫ ПРОТИВ         ***********    --> <!--
+<!--*********** МЫ ПРОТИВ         МЫ ПРОТИВ         МЫ ПРОТИВ       МЫ ПРОТИВ         ***********    -->
 <section class="advantages">
   <div class="container">
     <div class="adv_items">
@@ -247,7 +250,7 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
 
-<!--*********** НОВОСТИ            НОВОСТИ            НОВОСТИ            НОВОСТИ             ***********    -->  <!--
+<!--*********** НОВОСТИ            НОВОСТИ            НОВОСТИ            НОВОСТИ             ***********    -->
 <section class="news">
   <div class="container">
     <div class="news_top">
@@ -310,7 +313,7 @@
 </section>
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
 
-<!--
+
 
 <footer class="footer">
   <div class="footer_content">
@@ -361,6 +364,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/jquery.fancybox.min.js"></script>
 <!-- <script src="js/slick.min.js"></script> -->
-<script src="js/main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
