--- a/app/index.html
+++ b/app/index.html
@@ -1,369 +1,16 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatable"  content="ie=edge">
-    <title>Документ без названия</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Roboto:400,500&display=swap&subset=cyrillic" rel="stylesheet">
+    <title>Document</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-    <!-- <link rel="stylesheet" href="css/sl ick.css"> -->
-    <link rel="stylesheet" href="css/jquery.formstyler.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
-
-
 <body>
-  <!--*********** НАД МЕНЮ     НАД МЕНЮ          НАД МЕНЮ     НАД МЕНЮ            НАД МЕНЮ     НАД МЕНЮ***********    -->
-  <header class="header">
-    <div class="header_top">             <!-- Над шапкой -->
-      <div class="container">
-        <div class="header_contacts">
-          <a class="header_phone" href="tel:+79117235428">+7 (911) 723 54 28</a>
-          <a class="header_mail" href="#">strange3355@mail.ru</a>
-          <a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="header_qest" href="#">Задать вопрос</a>
-        </div>
-      </div>
-    </div>
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
-
-
-<!--*********** МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ       ***********    -->
-    <div class="header_content">
-      <div class="container">
-        <div class="header_content-inner">
-          <nav class="menu">
-            <div class="header_qest-menu">
-              <span class="icon-bars"></span>
-            </div>              <!-- Меню шапки -->
-            <ul>
-              <li><a href="#">ГЛАВНАЯ</a></li>
-              <li><a href="#">Об NO WASTE</a></li>
-              <li><a href="#">Что мы делаем</a></li>
-              <li><a href="#">Команда</a></li>
-              <li><a href="#">СМИ</a></li>
-              <li><a href="#">Законодательство</a></li>
-            </ul>
-          </nav>
-      </div>
-    </div>
-  </div>
-</header>
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
-
-
-<!--*********** ШАПКА ФОН     ШАПКА ФОН       ШАПКА ФОН     ШАПКА ФОН***********    -->
- <section class="slider">
-  <div class="container">
-   <div id="photo"><img src="img/logo.png" weight=600px; height="500px;"></div>
-  </div>
-</section>
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
-
-
-<!--***********ПОД ШАПКА ФОН    ПОД ШАПКА ФОН      ПОД ШАПКА ФОН    ПОД ШАПКА ФОН***********    -->
-<section class="services">
-  <div class="container">
-    <div class="services_top">
-      <div class="services_title-box">
-        <div class="services_title">
-          Если вы зашли на наш сайт:
-        </div>
-        <div class="services_text">
-          <ul>
-            <li class="li1">  Значит вам небезразличны вопросы экологии, здоровья, сохранения нашей с вами среды обитания;</li>
-            <li class="li1">  Значит вы задумались о том, что вы можете сделать для улучшения экологической обстановки в нашей стране;</li>
-            <li class="li1">  Значит вы беспокоитесь о своем будущем и будущем своих детей.</li>
-          </ul>
-        </div>
-      </div>
-      <div class="services_waste">
-      <img src="img/waste_icon.png" alt="">
-      <a  href="#" class="services_btn">
-        Что куда сдавать
-      </a>
-      </div>
-    </div>
-    <div class="services_items">
-      <div class="services_item">
-        <img src="img/about-1.png" alt="">
-        <div class="services_item-title">
-          Как мы это делаем
-        </div>
-        <div class="services_item-text">
-          <p>Продвижение раздельного сбора и переработки отходов в регионах, а также сокращение неперерабатываемых отходов, просвещение широких слоев населения о важности участия общественности в решении “мусорной” проблемы.</p>
-        </div>
-        <div class="services_item-btn">
-          <a href="#">Подробнее</a>
-        </div>
-      </div>
-      <div class="services_item">
-        <img src="img/about-2.png" alt="">
-        <div class="services_item-title">
-          Вдохновление
-        </div>
-        <div class="services_item-text">
-          <p>Польза раздельного сбора мусора очевидна. Такой подход уменьшает степень загрязнения воды, воздуха и земли. Вторичная переработка снижает количество потребляемой воды и величину городских свалок, экономит природные ресурсы Земли.</p>
-        </div>
-        <div class="services_item-btn">
-          <a href="#">Подробнее</a>
-        </div>
-      </div>
-      <div class="services_item">
-        <img src="img/about-3.png" alt="">
-        <div class="services_item-title">
-          Позиция
-        </div>
-        <div class="services_item-text">
-          <p>Общественные экологические организации России объединили свои усилия и создали Альянс против сжигания и за переработку отходов на нижеизложенных принципах для информирования населения России об опасностях, которые несет применение мусоросжигательных технологий.</p>
-        </div>
-        <div class="services_item-btn">
-          <a href="#">Подробнее</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
-
-
-<!--*********** О КОМПАНИИ       О КОМПАНИИ         О КОМПАНИИ***********    -->
-<section class="about">
-  <div class="container">
-    <div class="about_inner">
-      <div class="about_title">
-      О движении
-    </div>
-      <div class="about_text">
-        <p>Мы — большое сообщество людей, которое бережно относится к ресурсам планеты и выступает за новую систему обращения с отходами. Мы основываемся на принципах 3R — reduce, reuse, recycle (сокращай, используй повторно, перерабатывай). Мы — некоммерческая негосударственная ассоциация в сфере экологии и защиты окружающей среды «РазДельный Сбор».</p>
-
-        <p>Ассоциация появилась в Санкт-Петербурге в ноябре 2011 года, когда наши активисты провели первую акцию по сбору вторсырья. Сегодня штабы движения работают от Сочи до Владивостока — ищите штаб рядом с вами в географии движения. Московское отделение открылось в 2014 году.</p>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
-
-
-<!--*********** ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ         ОБРАТНАЯ СВЯЗТЬ       ОБРАТНАЯ СВЯЗТЬ         ***********    -->
-<section class="form">
-  <div class="container">
-    <div class="form_inner">
-      <div class="form_contenr">
-        <div class="form_title-box">
-          <div class="form_title">
-            Обратная связь
-          </div>
-          <div class="form_text">
-            <p>(Задать вопрос по теме сообщества, узнать про раздельный сбор, внести предложение или замечание и т.д.)</p>
-          </div>
-        </div>
-        <div class="form_box">
-          <form class="" action="index.html" method="post">
-            <div class="form_box-inner">
-              <div class="form_box-left">
-                <label>
-                  E-mail
-                  <input type="text" name="" value="">
-                </label>
-                <label>
-                  <p>Способ обратной связи </p>
-                  <p>(VK, Instagram, Facebook, WhatsApp)</p>
-                  <input type="text" name="" value="">
-                </label>
-                <label>
-                  Ф.И.О.
-                  <input type="text" name="" value="">
-                </label>
-                <label>Тема вопроса
-                  <select class="" name="">
-                    <option value="">-------</option>
-                    <option value="">Вопрос</option>
-                    <option value="">Предложение</option>
-                    <option value="">Претензия</option>
-                    <option value="">Как собирать</option>
-                    <option value="">Место сбора</option>
-                    <option value="">Другое</option>
-                  </select>
-                </label>
-              </div>
-              <div class="form_box-right">
-                <label>
-                  Сообщение
-                  </label>
-                  <textarea>Добрый день!...</textarea>
-                <input class="to_send" type="image" src="img/send.png" width="50px" height="">
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
-
-<!--*********** МЫ ПРОТИВ         МЫ ПРОТИВ         МЫ ПРОТИВ       МЫ ПРОТИВ         ***********    -->
-<section class="advantages">
-  <div class="container">
-    <div class="adv_items">
-      <div class="adv_item">
-        <div class="hhh">
-          <img src="img/redkrest.png" alt="" height="40px" width="">
-        </div>
-        <div class="adv_title">
-          Вырубка лесов
-        </div>
-        <div class="adv_text">
-          <p>Одна из самых распространенных проблем экологии. С уничтожением деревьев в системе биогеоценоза нарушается экологическое равновесие.</p>
-        </div>
-      </div>
-      <div class="adv_item">
-        <div class="hhh">
-          <img src="img/redkrest.png" alt="" height="40px" width="">
-        </div>
-        <div class="adv_title">
-          Мусорозжигание
-        </div>
-        <div class="adv_text">
-          <p>При сжигании отходов в воздух попадает много крайне опасных веществ, таких как диоксины и тяжелые металлы. Действие диоксинов на организм человека сравнимо с действием ВИЧ.</p>
-        </div>
-      </div>
-      <div class="adv_item">
-          <div class="hhh">
-            <img src="img/redkrest.png" alt="" height="40px" width="">
-          </div>
-        <div class="adv_title">
-          Загрязнение пресных вод
-        </div>
-        <div class="adv_text">
-          <p>В мире уже сейчас наблюдается нехватка пресной воды преимущественно, в регионах, находящихся близко к экватору. Загрязнение водоёмов лишь усугубляет положение вещей.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
-
-
-<!--*********** НОВОСТИ            НОВОСТИ            НОВОСТИ            НОВОСТИ             ***********    -->
-<section class="news">
-  <div class="container">
-    <div class="news_top">
-      <div class="news_title-box">
-        <div class="news_title">
-          Новости:
-        </div>
-        <div class="news_text">
-          <p>Движения стимулирует появление и развитие новой системы обращения с отходами в России, основанной на принципах 3R (reduce, reuse, recycle – уменьшай, используй повторно, перерабатывай), и формирует осознанное, рациональное отношение людей к природным ресурсам.</p>
-
-        </div>
-      </div>
-      <div class="news_waste">
-      <img src="img/news.png" alt="">
-      <a  href="#" class="news_btn">
-        Открыть все новости
-      </a>
-      </div>
-    </div>
-    <div class="news_inner">
-      <div class="news_slider">
-        <div class="news_slider-inner">
-            <div class="news_slider-item">
-              <div class="news_slider-title">
-                Мусорозжигание
-              </div>
-              <div class="news_slider-text">
-                  <p>Выбросы мусоросжигательных заводов очень опасны для здоровья. Из-за того, что в печь попадает несортированный мусор: пластиковые упаковки, батарейки, стройматериалы, органические отходы и т.д. - выбросы МСЗ содержат диоксины. Это одни из самых ядовитых веществ на планете и сильнейшие канцерогены.</p>
-              </div>
-            </div>
-        </div>
-      </div>
-      <a href="#" class="news_blog">
-        <div class="news_img">
-          <img src="img/news-2.jpg" alt="">
-          <div class="news_date">   20.02  </div>
-          </div>
-          <div class="news_blog-title">
-            Обращение с отходами в Цюрихе
-          </div>
-          <div class="news_blog-text">
-            <p>Швейцарии успешно удается поддерживать образ чистой и ухоженной страны, где все проблемы рационального природопользования и экологии давно решены. Так ли это?</p>
-          </div>
-        </a>
-
-        <a href="#" class="news_blog">
-          <div class="news_img">
-            <img src="img/news-1.jpg" alt="">
-            <div class="news_date">  17.02  </div>
-            </div>
-            <div class="news_blog-title">
-              Завод по переработке тетрапака
-            </div>
-            <div class="news_blog-text">
-              <p>Как перерабатывают полиэтилен и алюминий из многослойной упаковки Tetra Pak и ее аналогов на заводе “Инвестал” в г. Тамбов</p>
-            </div>
-          </a>
-      </div>
-  </div>
-</section>
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
-
-
-
-<footer class="footer">
-  <div class="footer_content">
-    <div class="container">
-      <div class="footer_inner">
-        <div class="footer_info">
-          <div class="footer_title">
-            <p>Движение "NO WASTE"</p>
-          </div>
-          <div class="footer_text">
-            <p>Деятельность движения стимулирует появление и развитие новой системы обращения с отходами в России, основанной на принципах 3R (reduce, reuse, recycle – уменьшай, используй повторно, перерабатывай), и формирует осознанное, рациональное отношение людей к природным ресурсам.</p>
-          </div>
-            <a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="header_qest" href="#">Задать вопрос</a>
-            <ul class="footer_list">
-              <li><a class="footer_phone" href="tel:+79117235428">+7 (911) 723 54 28</a></li>
-              <li><a class="footer_mail" href="#">strange3355@mail.ru</a></li>
-              <li><a class="footer_adress" href="#">СПб, Смольный пр-д, 1</a></li>
-            </ul>
-        </div>
-        <div class="footer_map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1433.4756173342266!2d30.394919122871983!3d59.94580525193516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696318c3393243f%3A0x28950e733072f5ce!2z0KHQvNC-0LvRjNC90YvQuSDQv9GALdC0LCAxLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTI0!5e0!3m2!1sru!2sru!4v1577277794536!5m2!1sru!2sru" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="footer_copy">
-    <div class="container">
-      <div class="copy_text">
-      © 2019 Developed by Alexander Nazarov. Все права защищены.
-      </div>
-    </div>
-  </div>
-</footer>
-
--->
-
-
-
-<div id="animatedModal" class="animated-modal">
-  <form>
-    <input type="text" placeholder="Ваше имя">
-    <input type="text" placeholder="Ваш телефон">
-    <input type="submit" value="Отправить">
-  </form>
- </div>
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="js/jquery.fancybox.min.js"></script>
-<!-- <script src="js/slick.min.js"></script> -->
-<script src="main.js"></script>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi accusamus iste distinctio amet id maxime, atque esse cum repellat, quaerat quas tempore at perferendis nihil eligendi beatae neque enim magnam.
 </body>
+
 </html>
