--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,42 @@
 </head>
 
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi accusamus iste distinctio amet id maxime, atque esse cum repellat, quaerat quas tempore at perferendis nihil eligendi beatae neque enim magnam.
+    <header class="header">
+        <div class="header_top">
+            <!-- Над шапкой -->
+            <div class="container">
+                <div class="header_contacts">
+                    <a class="header_phone" href="tel:+79117235428">+7 (911) 723 54 28</a>
+                    <a class="header_mail" href="#">strange3355@mail.ru</a>
+                    <a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="header_qest" href="#">Задать вопрос</a>
+                </div>
+            </div>
+        </div>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
+
+
+        <!--*********** МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ       ***********    -->
+        <div class="header_content">
+            <div class="container">
+                <div class="header_content-inner">
+                    <nav class="menu">
+                        <div class="header_qest-menu">
+                            <span class="icon-bars"></span>
+                        </div>
+                        <!-- Меню шапки -->
+                        <ul>
+                            <li><a href="#">ГЛАВНАЯ</a></li>
+                            <li><a href="#">Об NO WASTE</a></li>
+                            <li><a href="#">Что мы делаем</a></li>
+                            <li><a href="#">Команда</a></li>
+                            <li><a href="#">СМИ</a></li>
+                            <li><a href="#">Законодательство</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
