--- a/app/index.html
+++ b/app/index.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
-<body>
+<body class="page">
     <header class="header">
-        <div class="header_top">
-            <!-- Над шапкой -->
+        <div class="header__top">
             <div class="container">
-                <div class="header_contacts">
-                    <a class="header_phone" href="tel:+79117235428">+7 (911) 723 54 28</a>
-                    <a class="header_mail" href="#">strange3355@mail.ru</a>
-                    <a data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" class="header_qest" href="#">Задать вопрос</a>
+                <div class="header__contacts">
+                    <a class="header__phone" href="tel:+79117235428">+7 (911) 723 54 28</a>
+                    <a class="header__mail" href="#">strange3355@mail.ru</a>
+                    <a class="header__qest" data-fancybox data-animation-duration="700" data-src="#animatedModal" href="javascript:;" href="#">Задать вопрос</a>
                 </div>
             </div>
         </div>
-        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -   -->
-
-
-        <!--*********** МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ      МЕНЮ       ***********    -->
-        <div class="header_content">
+        <div class="header__content">
             <div class="container">
-                <div class="header_content-inner">
+                <div class="header__content-inner">
                     <nav class="menu">
-                        <div class="header_qest-menu">
+                        <div class="header__qest-menu">
                             <span class="icon-bars"></span>
                         </div>
-                        <!-- Меню шапки -->
                         <ul>
                             <li><a href="#">ГЛАВНАЯ</a></li>
                             <li><a href="#">Об NO WASTE</a></li>
